force-app/main/default/objects/OrgCustomTab__c/OrgCustomTab__c.object-meta.xml
<CustomObject>
    <description>Custom Tab information retrieved from polling for search functionality</description>
    <label>OrgCustomTab</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgCustomTabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>