force-app/main/default/objects/OrgCustomTab__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Full Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>