force-app/main/default/objects/OrgCustomTab__c/fields/ManageableState__c.field-meta.xml
<CustomField>
    <fullName>ManageableState__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Field Is the Tab managed or not</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ManageableState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>