force-app/main/default/objects/OrgCustomTab__c/fields/TabCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>TabCreatedBy__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Org User who created the Tab</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TabCreatedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>