force-app/main/default/objects/OrgCustomTab__c/fields/TabCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>TabCreatedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date this Tab was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TabCreatedDate</label>
    <type>DateTime</type>
</CustomField>